syntax = "proto3";

import "google/protobuf/struct.proto";

package tansive;

option go_package = "tansive_grpc_unary/proto;proto";

service SkillService {
  rpc InvokeSkill(SkillInvocation) returns (SkillResult);
}

message SkillInvocation {
  string session_id = 1;
  string invocation_id = 2;
  string skill_name = 3;
  google.protobuf.Struct args = 4; // arbitrary map<string, any>
}

message SkillResult {
  string invocation_id = 1;
  google.protobuf.Struct output = 2; // arbitrary map<string, any>
}
